# RaffiGame

./: CMakeLists.txt  README.md  compiler.cmake
core/: CMakeLists.txt
core/header/: ra_application.h  ra_game.h  ra_launcher.h
core/header/launcher/: ra_launcher_netcode.h  ra_launcher_window.h  ra_messages.h
core/src/: ra_application.cpp  ra_launcher.cpp  ra_launcher_netcode.cpp  ra_launcher_window.cpp
game/: CMakeLists.txt
game/src/: main.cpp
rendering/: CMakeLists.txt
shared/: CMakeLists.txt
shared/header/: ra_utils.h
